fixed unaligned icon

--- a/newrai/app/static/css/app.css
+++ b/newrai/app/static/css/app.css
@@ -738,8 +738,7 @@ section {
 
 .why-us .icon-box .description {
 	margin-left: 95px;
-	line-height: 24px;
-	font-size: 14px;
+	font-size: 15px;
 }
 
 .why-us .video-box {
